--- a/app/templates/homepage.html
+++ b/app/templates/homepage.html
@@ -5,7 +5,7 @@
   <div>
     <button onclick="location.href='/strumenti'">1. Lista Strumenti</button>
     <button onclick="location.href='/richieste'">2. Storico Richieste</button>
-    <button onclick="location.href='/utenti/gestione'">3. Gestione</button>
+    <button onclick="location.href='/dashboard'">3. Gestione</button>
   </div>
 
 {% endblock %}
